[package]
name = "buttboost"
description = "Use system audio to control your buttplug"
version = "0.0.1-alpha.0"
edition = "2021"
license = "BSD-2-Clause"
repository = "https://github.com/heldom1proton/buttboost"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttplug = "7.0.1"
tokio = { version = "1.25.0", features = ["io-std", "io-util", "rt-multi-thread", "macros"] }
anyhow = "1.0.69"
futures = "0.3.26"